[package]
name = "fuse-dev"
version = "0.1.0"
authors = ["Ninad <b.ninad50@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.7"
libc = "0.2.51"
s3 = { git = "https://github.com/awslabs/aws-sdk-rust", tag = "v0.0.5-alpha", package = "aws-sdk-s3", path = "../../s3" }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1.50"